# windSockCV

./: .gitignore  CMakeLists.txt  build.bat
Unity/: WindSockCV.cs  WindSockCVClient.cs
src/: mainclient.cpp  mainserver.cpp  serversettings.h
